objects/EC_AccObj1__c.object
<CustomObject>
    <fields>
        <fullName>Afield__c</fullName>
        <label>Afield</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ECField11__c</fullName>
        <description>Add Test1 &amp; Test2</description>
        <label>ECField11</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ECField12__c</fullName>
        <description>Add &quot;Test1&quot; &amp; &quot;Test2&quot;.</description>
        <label>ECField12</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ECField4__c</fullName>
        <description>Add Comment change &quot;ECField4&quot; and &apos;sai&apos;</description>
        <label>ECField4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ECOBjField1__c</fullName>
        <label>ECOBjField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ECP_Field3__c</fullName>
        <description>Scenario5</description>
        <label>ECP-Field3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ECP_Field4__c</fullName>
        <label>ECP-Field4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ECP_Field5__c</fullName>
        <description>QA test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>ECP-Field5</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GOOD</fullName>
                    <default>true</default>
                    <label>GOOD</label>
                </value>
                <value>
                    <fullName>BAD</fullName>
                </value>
                <value>
                    <fullName>WORSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Field1__c</fullName>
        <description>Test  Edit</description>
        <label>EC-Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EC_Field2__c</fullName>
        <description>Edit ECField2</description>
        <label>EC-Field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EC_Field3__c</fullName>
        <description>Add field3 scenario6 Field3</description>
        <label>EC-Field3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ESSfield8s__c</fullName>
        <description>Edit field</description>
        <label>ECfield8</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EaField__c</fullName>
        <label>EaField</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EcbField__c</fullName>
        <label>EcbField</label>
        <type>Phone</type>
    </fields>
    <label>EC-AccObj1</label>
    <nameField>
        <label>EC-AccObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECAccObj1s</pluralLabel>
    <recordTypes>
        <fullName>ABrecordType1</fullName>
        <active>false</active>
        <label>ABrecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>ArecordTyp1</fullName>
        <active>true</active>
        <label>ArecordTyp1</label>
    </recordTypes>
    <recordTypes>
        <fullName>ECPRecordType3</fullName>
        <active>true</active>
        <label>ECPRecordType3</label>
    </recordTypes>
    <recordTypes>
        <fullName>ECPRecordType4</fullName>
        <active>false</active>
        <label>ECPRecordType4</label>
    </recordTypes>
    <recordTypes>
        <fullName>ECRecordType1</fullName>
        <active>true</active>
        <label>ECRecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>ECRecordType2</fullName>
        <active>true</active>
        <label>ECRecordType2</label>
    </recordTypes>
    <recordTypes>
        <fullName>ECrecordTypeTest3</fullName>
        <active>false</active>
        <description>&quot;ADD&quot; record type description &apos;Test1&apos;</description>
        <label>ECrecordTypeTest3</label>
    </recordTypes>
    <recordTypes>
        <fullName>ECsrecordtype23</fullName>
        <active>false</active>
        <label>ECsrecordtype2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcValRule1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( ECP_Field3__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AvalRule1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( EC_Field1__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECPValidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( ECP_Field3__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECPValidationRule4</fullName>
        <active>false</active>
        <description>Test Sscenario 7</description>
        <errorConditionFormula>ISBLANK( ECP_Field4__c )</errorConditionFormula>
        <errorMessage>Please Enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECVRule1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  ECOBjField1__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECValidateRule2</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( EC_Field2__c )</errorConditionFormula>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECvalidateRULE6</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( EC_Field3__c )</errorConditionFormula>
        <errorMessage>Please enter avalue</errorMessage>
    </validationRules>
</CustomObject>